projects gallery fully updated

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -218,89 +218,89 @@
       },
       "projects": [
         {
-          "title": "مشروع الطقس الحكومي في بنغلاديش",
-          "description": "منصة متقدمة لتحليلات الطقس. توفر هذه اللوحة الذكية رؤى شاملة ودقيقة حول بيانات الطقس في بنغلاديش بوضوح واحترافية عالية.",
-          "image": "BDW1.png",
-          "deploymentUrl": "https://www.bmdcl17.com/"
-        },
-        {
-          "title": "معهد الدعوة الإسلامية",
-          "description": "معهد الدعوة الإسلامية هو تطبيق مبني باستخدام Next.js (App Router) وTypeScript، يهدف إلى تنسيق وإعداد تقارير أنشطة الدعوة الإسلامية. يتضمن لوحات تحكم قائمة على الأدوار للمشرفين والدعاة والمساعدين والمستخدمين.",
-          "image": "ISD1.jpeg",
-          "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
-        },
-        {
-          "title": "منصة عروض النقل – تكساس",
-          "description": "توفر منصة عروض النقل في تكساس خدمات انتقال متكاملة في جميع أنحاء الولاية. تقوم بمطابقة العملاء مع شركات نقل موثوقة، وتقديم عروض أسعار فورية، وتتبع تقدم عملية النقل في الوقت الفعلي لضمان تجربة خالية من التوتر.",
-          "image": "MQT1.png",
-          "deploymentUrl": "https://movingquotetexas.com/"
-        },
-        {
-          "title": "هيلفول فُضول — متجر الكتب",
-          "description": "هيلفول فُضول هو متجر إلكتروني مبني باستخدام Next.js (App Router) وTypeScript، مخصص للكتب ودور النشر. يتضمن نظام إدارة للمنتجات والمؤلفين والناشرين والطلبات، بالإضافة إلى واجهة تسوق للعملاء تشمل التصفح والبحث وسلة المشتريات وقائمة المفضلة ونظام دفع متكامل.",
-          "image": "KG2.png",
-          "deploymentUrl": "https://hilfulfujulbd.com/"
-        },
-        {
-          "title": "منصة عروض النقل – نيويورك",
-          "description": "توفر منصة عروض النقل في نيويورك خدمات انتقال شاملة داخل الولاية، مع تقديم عروض أسعار فورية، وتتبع مباشر لحالة النقل، وربط العملاء بشركات موثوقة لضمان تجربة سلسة وآمنة.",
-          "image": "MQN1.png",
-          "deploymentUrl": "https://movingquotenewyork.com/"
-        },
-        {
-          "title": "نظام إدارة المهام للسمعة الرقمية",
-          "description": "نظام إدارة المهام للسمعة الرقمية هو منصة مبنية باستخدام Next.js (App Router) وTypeScript لإدارة عمليات العملاء بشكل متكامل. يتضمن لوحات تحكم مخصصة حسب الأدوار، وسير عمل للمهام وضبط الجودة، وإدارة أسباب الإيقاف، ونظام تقييم الأداء.",
-          "image": "NR2.png",
-          "deploymentUrl": "http://app.netreptask.com/"
-        },
-        {
-          "title": "ريبيوتيشن برايم",
-          "description": "ريبيوتيشن برايم هو نظام حديث لإدارة المهام مبني باستخدام Next.js (App Router) وTypeScript، يتيح إدارة عمليات العملاء من البداية إلى النهاية مع لوحات تحكم متعددة الأدوار وسير عمل متكامل لمراقبة الجودة وتقييم الأداء.",
-          "image": "RP2.png",
-          "deploymentUrl": "https://reputationtask.com/"
-        },
-        {
-          "title": "غرافيون — الارتقاء بالصحة والعافية والإنسانية",
-          "description": "في غرافيون نؤمن بالتقاء الفخامة والعافية، حيث يلتقي العلم بالإنسانية. نهجنا قائم على الدقة ومدعوم بالأبحاث ومستوحى من الإمكانات العميقة لازدهار الإنسان.",
-          "image": "GR1.png",
-          "deploymentUrl": "https://www.gravionne.com/"
-        },
-        {
-          "title": "نظام إدارة الإجازات لبنك AIBL",
-          "description": "هذا المشروع هو نظام ذكي لإدارة الحضور تم تطويره لبنك الأرافة الإسلامي المحدود. يتيح مراقبة وإدارة حضور الموظفين في الوقت الفعلي، مع لوحة تحكم ديناميكية تعرض عدد الموظفين النشطين والحاضرين والمتأخرين والغائبين والعاملين في الميدان مع نسب مئوية.",
-          "image": "AIBL1.jpeg",
-          "deploymentUrl": "https://aibl-plc.vercel.app/"
-        },
-        {
-          "title": "نظام تقارير الحمض النووي",
-          "description": "أرشيف الحمض النووي هو نظام مركزي لإدارة المختبرات، يتتبع القضايا والعينات والتقارير والتخزين ونشاط المستخدمين. يوفر تحليلات فورية ومراقبة للنظام وسير عمل مبسط لإدارة البيانات الجنائية بكفاءة.",
-          "image": "DNA1.png",
-          "deploymentUrl": "https://dna-case-management.vercel.app/login"
-        },
-        {
-          "title": "نظام إدارة العقارات",
-          "description": "تم تصميم هذه المنصة لشركات العقارات مع أدوار مميزة للمشرفين والوكلاء والعملاء. يمكن للمشرفين إدارة جميع العمليات، بينما يدير الوكلاء قوائم العقارات الخاصة بهم، ويمكن للمستخدمين تصفح وتصفية والاستفسار عن العقارات. يضمن النظام وصولًا آمنًا متعدد الأدوار ودعمًا متعدد اللغات.",
-          "image": "RE1.png",
-          "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
-        },
-        {
-          "title": "نظام إيكو مونيتور",
-          "description": "إيكو مونيتور هو نظام ذكي لمراقبة البيئة يوفر بيانات وتحليلات الطقس في الوقت الفعلي. يعرض مؤشرات رئيسية مثل درجة الحرارة والرطوبة وسرعة الرياح ومؤشر الأشعة فوق البنفسجية من خلال لوحات تفاعلية وتنبيهات ذكية لدعم اتخاذ القرار الاستباقي.",
-          "image": "EM1.jpeg",
-          "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
-        },
-        {
-          "title": "نظام كشف الاحتيال",
-          "description": "هذا المشروع هو نظام لمراجعة والتحقق من الأنشطة الاحتيالية في تقييمات الأعمال، مصمم لتحليل والتحقق من أنشطة المراجعات التجارية. يعرض ملفات تعريف تفصيلية للشركات تشمل الموقع الجغرافي، معلومات الاتصال، التقييمات وإحصائيات المراجعات. يتتبع النظام إجمالي المراجعات وعدد المراجعين ومتوسط المراجعات لكل شخص لاكتشاف الأنماط المشبوهة. بفضل ميزات إعادة الفحص، تتبع الحالة، تصدير PDF وإدارة الطلبات، يساعد النظام في كشف السلوك الاحتيالي، وضمان صحة البيانات، ودعم اتخاذ القرارات المتعلقة بإدارة المراجعات والامتثال.",
-          "image": "FD1.jpeg",
-          "deploymentUrl": "https://review.reputationtask.com/login"
-        },
-        {
-          "title": "تدريب PCO",
-          "description": "تدريب PCO هو منصة متخصصة للسائقين المحترفين في المملكة المتحدة، توفر وحدات تدريب شاملة واختبارات تدريبية وإعدادًا للحصول على الشهادات لتلبية المتطلبات التنظيمية وتحسين المهارات.",
-          "image": "PCO1.png",
-          "deploymentUrl": "https://uk-driving-course.vercel.app/en"
-        }
+  "title": "مشروع الطقس الحكومي في بنغلاديش",
+  "description": "منصة متقدمة لتحليلات الطقس. توفر لوحتنا المتطورة رؤى شاملة حول حالة الطقس في بنغلاديش بدقة ووضوح.",
+  "images": ["BDW1.png", "BDW2.png", "BDW3.png"],
+  "deploymentUrl": "https://www.bmdcl17.com/"
+},
+    {
+      "title": "معهد الدعوة الإسلامية",
+      "description": "الدعوة الإسلامية هو تطبيق Next.js (App Router) + TypeScript لتنسيق وإبلاغ أنشطة الدعوة الإسلامية. يتميز بلوحات تحكم قائمة على الأدوار (مسؤول، داعية/سفير، مساعد، ومستخدم).",
+      "images": ["ISD1.jpeg", "ISD2.jpeg", "ISD3.jpeg"],
+      "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
+    },
+    {
+      "title": "نقل تقدير نيويورك",
+      "description": "تقدم Moving Quote New York خدمات نقل شاملة في جميع أنحاء نيويورك. تقوم المنصة بمطابقة العملاء مع نقال موثوقين، وتقدم عروض أسعار فورية، وتتتبع تقدم النقل في الوقت الفعلي، وتوفر موارد نقل شاملة لضمان تجربة خالية من الإجهاد.",
+      "images": ["MQT1.png", "MQT2.png", "MQT3.png"],
+      "deploymentUrl": "https://movingquotenewyork.com/"
+    },
+    {
+      "title": "حلف الفضول - مكتبة",
+      "description": "حلف الفضول هو منصة تجارة إلكترونية Next.js (App Router) + TypeScript مصممة خصيصًا للكتب ودور النشر. يتضمن واجهات إدارة قائمة على الأدوار لإدارة المنتجات والكتاب ودور النشر والطلبات؛ وواجهة متجر للعملاء مع تصفح الفئات والبحث وسلة التسوق وقائمة الرغبات؛ وتدفق إتمام الشراء مع معالجة الدفع.",
+      "images": ["KG2.png", "KG1.png", "KG3.png"],
+      "deploymentUrl": "https://hilfulfujulbd.com/"
+    },
+    {
+      "title": "نقل تقدير نيويورك",
+      "description": "تقدم Moving Quote New York خدمات نقل شاملة في جميع أنحاء نيويورك. تقوم المنصة بمطابقة العملاء مع نقال موثوقين، وتقدم عروض أسعار فورية، وتتتبع تقدم النقل في الوقت الفعلي، وتوفر موارد نقل شاملة لضمان تجربة خالية من الإجهاد.",
+      "images": ["MQN1.png", "MQT2.png", "MQT3.png"],
+      "deploymentUrl": "https://movingquotenewyork.com/"
+    },
+    {
+      "title": "نظام إدارة مهام نت ربيوتيشن",
+      "description": "نظام إدارة مهام Net Reputation هو منصة Next.js (App Router) + TypeScript لتشغيل عمليات العملاء الشاملة. يتضمن لوحات تحكم خاصة بالأدوار (مسؤول، مدير حساب/رئيس تنفيذي، وكيل، مراقبة جودة، إدخال بيانات، عميل)، وسير عمل المهام ومراقبة الجودة مع أسباب الإيقاف المؤقت وتسجيل الأداء.",
+      "images": ["NR1.png", "NR2.png", "NR3.png"],
+      "deploymentUrl": "http://app.netreptask.com/"
+    },
+    {
+      "title": "ريبيوتيشن برايم",
+      "description": "نظام إدارة مهام Reputation Prime هو منصة Next.js (App Router) + TypeScript لتشغيل عمليات العملاء الشاملة. يتضمن لوحات تحكم خاصة بالأدوار (مسؤول، مدير حساب/رئيس تنفيذي، وكيل، مراقبة جودة، إدخال بيانات، عميل)، وسير عمل المهام ومراقبة الجودة مع أسباب الإيقاف المؤقت وتسجيل الأداء.",
+      "images": ["RP1.png", "RP2.png", "RP3.png"],
+      "deploymentUrl": "https://reputationtask.com/"
+    },
+    {
+      "title": "جرافيون - لرفع مستوى الصحة والعافية والإنسانية",
+      "description": "في Gravionne، نؤمن بتقاطع الفخامة والعافية، حيث يلتقي العلم بالإنسانية. نهجنا متجذر في الدقة، ويسترشد بالبحث، ومستوحى من الإمكانات العميقة للازدهار البشري.",
+      "image": "GR1.png",
+      "deploymentUrl": "https://www.gravionne.com/"
+    },
+    {
+      "title": "نظام إدارة الإجازات - بنك العرفة الإسلامي",
+      "description": "هذا المشروع هو نظام ذكي لإدارة الحضور تم تطويره لبنك العرفة الإسلامي المحدود لمراقبة وإدارة حضور الموظفين في الوقت الفعلي. يوفر النظام لوحة معلومات ديناميكية تعرض إجمالي الموظفين النشطين، والحاضرين، والمتأخرين، والغائبين، والموظفين المناوبين مع رؤى النسب المئوية.",
+      "images": ["AIBL1.jpeg", "AIBL2.jpeg"],
+      "deploymentUrl": "https://aibl-plc.vercel.app/"
+    },
+    {
+      "title": "نظام المراقبة البيئية",
+      "description": "EcoMonitor هو نظام ذكي لمراقبة البيئة يوفر رؤى وتحليلات جوية في الوقت الفعلي. يعرض مقاييس رئيسية مثل درجة الحرارة والرطوبة وسرعة الرياح والضغط ومؤشر الأشعة فوق البنفسجية وهطول الأمطار من خلال لوحات معلومات تفاعلية ورسوم بيانية مرئية. تتميز المنصة بتحليل الاتجاهات ورسوم البيانات المتحركة وتنبيهات النظام مثل تحذيرات الأشعة فوق البنفسجية العالية لدعم اتخاذ القرارات الاستباقية.",
+      "images": ["EM1.jpeg","EM2.jpeg","EM3.jpeg","EM4.jpeg"],
+      "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
+    },
+    {
+      "title": "نظام تقارير الحمض النووي",
+      "description": "DNA Archive هو نظام مركزي لإدارة المختبرات يتتبع الحالات والعينات والتقارير والتخزين ونشاط المستخدم. يوفر تحليلات في الوقت الفعلي ومراقبة النظام وسير عمل مبسط لإدارة بيانات الطب الشرعي بكفاءة.",
+      "images": ["DNA1.png"],
+      "deploymentUrl": "https://dna-case-management.vercel.app/login"
+    },
+    {
+      "title": "نظام إدارة العقارات",
+      "description": "تم تصميم منصة شركة العقارات هذه لإدارة قوائم العقارات وتفاعلات المستخدمين بأدوار متميزة للمسؤولين والوكلاء والعملاء. يمكن للمسؤولين الإشراف على جميع العمليات وإدارة المستخدمين والعقارات؛ ويمكن للوكلاء إضافة وإدارة قوائم العقارات الخاصة بهم؛ بينما يمكن للمستخدمين تصفح العقارات وتصفيتها والاستفسار عنها. يضمن النظام وصولاً آمنًا قائمًا على الأدوار ودعمًا متعدد اللغات وتواصلًا سلسًا بين جميع الأطراف المعنية.",
+      "images": ["RE1.png"],
+      "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
+    },
+    {
+      "title": "تدريب سائقي المركبات الخاصة",
+      "description": "PCO Training هو منصة متخصصة للسائقين المحترفين في المملكة المتحدة. يقدم وحدات تدريب شاملة واختبارات تدريبية وتحضير للحصول على الشهادات لمساعدة السائقين على تلبية المتطلبات التنظيمية وتحسين مهاراتهم.",
+      "images": ["PCO1.png"],
+      "deploymentUrl": "https://uk-driving-course.vercel.app/en"
+    },
+    {
+      "title": "نظام كشف الاحتيال",
+      "description": "هذا المشروع هو نظام مراجعة والتحقق من الاحتيال مصمم لتحليل والتحقق من صحة أنشطة مراجعة الأعمال. يعرض ملفات تعريف أعمال مفصلة مع خرائط الموقع ومعلومات الاتصال والتقييمات وإحصائيات المراجعة. تتتبع المنصة إجمالي المراجعات والمراجعين ومتوسط المراجعات لكل شخص لتحديد الأنماط المشبوهة. مع ميزات مثل إعادة الفحص وتتبع الحالة وتصدير PDF وإدارة الطلبات، يساعد النظام في اكتشاف السلوك الاحتيالي وضمان صحة البيانات ودعم اتخاذ القرارات المستنيرة لمراجعة التعديلات والامتثال.",
+      "images": ["FD1.jpeg"],
+      "deploymentUrl": "https://review.reputationtask.com/login"
+    }
       ]
     },
     "clientPage": {
