--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -216,89 +216,89 @@
       },
       "projects": [
         {
-          "title": "বাংলাদেশ আবহাওয়া সরকারি প্রকল্প",
-          "description": "উন্নত আবহাওয়া বিশ্লেষণ প্ল্যাটফর্ম। এই আধুনিক ড্যাশবোর্ডটি নির্ভুলতা ও স্পষ্টতার সাথে বাংলাদেশের জন্য বিস্তৃত আবহাওয়া সংক্রান্ত তথ্য ও বিশ্লেষণ প্রদান করে।",
-          "image": "BDW1.png",
-          "deploymentUrl": "https://www.bmdcl17.com/"
-        },
-        {
-          "title": "ইসলামি দাওয়াহ ইনস্টিটিউট",
-          "description": "ইসলামি দাওয়াহ একটি Next.js (App Router) ও TypeScript ভিত্তিক অ্যাপ্লিকেশন, যা ইসলামি দাওয়াত কার্যক্রমের সমন্বয় ও রিপোর্টিংয়ের জন্য তৈরি। এতে অ্যাডমিন, দায়ী/অ্যাম্বাসেডর, অ্যাসিস্ট্যান্ট ও সাধারণ ব্যবহারকারীর জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড রয়েছে।",
-          "image": "ISD1.jpeg",
-          "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
-        },
-        {
-          "title": "মুভিং কোট টেক্সাস",
-          "description": "মুভিং টেক্সাস টেক্সাস জুড়ে সম্পূর্ণ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে সংযুক্ত করে, তাৎক্ষণিক কোট প্রদান করে, রিয়েল-টাইমে মুভিং অগ্রগতি ট্র্যাক করে এবং ঝামেলামুক্ত অভিজ্ঞতার জন্য প্রয়োজনীয় সকল রিসোর্স সরবরাহ করে।",
-          "image": "MQT1.png",
-          "deploymentUrl": "https://movingquotetexas.com/"
-        },
-        {
-          "title": "হিলফুল ফুযুল — বইয়ের দোকান",
-          "description": "হিলফুল ফুযুল একটি Next.js (App Router) ও TypeScript ভিত্তিক ই-কমার্স প্ল্যাটফর্ম, যা বই ও প্রকাশকদের জন্য বিশেষভাবে তৈরি। এতে পণ্য, লেখক, প্রকাশক ও অর্ডার ব্যবস্থাপনার জন্য অ্যাডমিন প্যানেল রয়েছে, পাশাপাশি গ্রাহকদের জন্য ক্যাটাগরি ব্রাউজিং, সার্চ, কার্ট, উইশলিস্ট এবং পেমেন্টসহ সম্পূর্ণ চেকআউট সিস্টেম অন্তর্ভুক্ত।",
-          "image": "KG2.png",
-          "deploymentUrl": "https://hilfulfujulbd.com/"
-        },
-        {
-          "title": "মুভিং কোট নিউ ইয়র্ক",
-          "description": "মুভিং কোট নিউ ইয়র্ক নিউ ইয়র্ক জুড়ে পূর্ণাঙ্গ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে যুক্ত করে, তাৎক্ষণিক কোট দেয়, রিয়েল-টাইমে মুভিং স্ট্যাটাস ট্র্যাক করে এবং একটি চাপমুক্ত অভিজ্ঞতা নিশ্চিত করে।",
-          "image": "MQN1.png",
-          "deploymentUrl": "https://movingquotenewyork.com/"
-        },
-        {
-          "title": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম",
-          "description": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম একটি Next.js (App Router) ও TypeScript ভিত্তিক প্ল্যাটফর্ম, যা সম্পূর্ণ ক্লায়েন্ট অপারেশন পরিচালনার জন্য ব্যবহৃত হয়। এতে অ্যাডমিন, AM/CEO, এজেন্ট, QC, ডাটা এন্ট্রি ও ক্লায়েন্টদের জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ওয়ার্কফ্লো, পজ কারণ এবং পারফরম্যান্স স্কোরিং অন্তর্ভুক্ত।",
-          "image": "NR2.png",
-          "deploymentUrl": "http://app.netreptask.com/"
-        },
-        {
-          "title": "রেপুটেশন প্রাইম",
-          "description": "রেপুটেশন প্রাইম একটি আধুনিক টাস্ক ম্যানেজমেন্ট সিস্টেম, যা Next.js (App Router) ও TypeScript দিয়ে তৈরি। এটি এন্ড-টু-এন্ড ক্লায়েন্ট অপারেশন পরিচালনার জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ব্যবস্থাপনা, পজ ট্র্যাকিং এবং পারফরম্যান্স মূল্যায়ন সুবিধা প্রদান করে।",
-          "image": "RP2.png",
-          "deploymentUrl": "https://reputationtask.com/"
-        },
-        {
-          "title": "গ্রাভিওন — স্বাস্থ্য, সুস্থতা ও মানবতার নতুন উচ্চতা",
-          "description": "গ্রাভিওনে আমরা বিশ্বাস করি বিলাসিতা ও সুস্থতার সংযোগে, যেখানে বিজ্ঞান ও মানবিকতা একত্রিত হয়। আমাদের দৃষ্টিভঙ্গি নির্ভুলতা-নির্ভর, গবেষণা দ্বারা পরিচালিত এবং মানব সম্ভাবনার সর্বোচ্চ বিকাশ দ্বারা অনুপ্রাণিত।",
-          "image": "GR1.png",
-          "deploymentUrl": "https://www.gravionne.com/"
-        },
-        {
-          "title": "AIBL ছুটি ব্যবস্থাপনা সিস্টেম",
-          "description": "এই প্রকল্পটি আল-আরাফাহ ইসলামী ব্যাংক পিএলসির জন্য তৈরি একটি স্মার্ট উপস্থিতি ব্যবস্থাপনা সিস্টেম। এটি রিয়েল-টাইমে কর্মীদের উপস্থিতি পর্যবেক্ষণ ও ব্যবস্থাপনা করে। সিস্টেমটি মোট সক্রিয় কর্মী, উপস্থিত, দেরিতে আগত, অনুপস্থিত এবং ডিউটিতে থাকা কর্মীদের শতাংশসহ একটি ডায়নামিক ড্যাশবোর্ডে প্রদর্শন করে।",
-          "image": "AIBL1.jpeg",
-          "deploymentUrl": "https://aibl-plc.vercel.app/"
-        },
-        {
-          "title": "ডিএনএ রিপোর্ট সিস্টেম",
-          "description": "ডিএনএ আর্কাইভ একটি কেন্দ্রীভূত ল্যাবরেটরি ব্যবস্থাপনা সিস্টেম, যা কেস, নমুনা, রিপোর্ট, সংরক্ষণ এবং ব্যবহারকারীর কার্যক্রম ট্র্যাক করে। এটি রিয়েল-টাইম অ্যানালিটিক্স, সিস্টেম মনিটরিং এবং দক্ষ ফরেনসিক ডেটা ব্যবস্থাপনার জন্য সুসংগঠিত ওয়ার্কফ্লো প্রদান করে।",
-          "image": "DNA1.png",
-          "deploymentUrl": "https://dna-case-management.vercel.app/login"
-        },
-        {
-          "title": "রিয়েল এস্টেট ব্যবস্থাপনা সিস্টেম",
-          "description": "এই প্ল্যাটফর্মটি রিয়েল এস্টেট প্রতিষ্ঠানের জন্য তৈরি, যেখানে অ্যাডমিন, এজেন্ট ও ক্লায়েন্টদের জন্য আলাদা ভূমিকা রয়েছে। অ্যাডমিনরা সকল অপারেশন ও সম্পত্তি ব্যবস্থাপনা করতে পারে, এজেন্টরা নিজস্ব প্রপার্টি তালিকা যোগ ও পরিচালনা করতে পারে, এবং ব্যবহারকারীরা প্রপার্টি ব্রাউজ, ফিল্টার ও অনুসন্ধান করতে পারে। সিস্টেমটি নিরাপদ ভূমিকা-ভিত্তিক অ্যাক্সেস, বহুভাষা সমর্থন এবং কার্যকর যোগাযোগ নিশ্চিত করে।",
-          "image": "RE1.png",
-          "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
-        },
-        {
-          "title": "ইকোমনিটর সিস্টেম",
-          "description": "ইকোমনিটর একটি স্মার্ট পরিবেশ পর্যবেক্ষণ সিস্টেম, যা রিয়েল-টাইম আবহাওয়া তথ্য ও বিশ্লেষণ প্রদান করে। এতে তাপমাত্রা, আর্দ্রতা, বাতাসের গতি, চাপ, ইউভি সূচক ও বৃষ্টিপাতসহ গুরুত্বপূর্ণ ডেটা ইন্টারঅ্যাকটিভ ড্যাশবোর্ড ও চার্টের মাধ্যমে প্রদর্শিত হয়। ট্রেন্ড অ্যানালাইসিস, অ্যানিমেটেড ভিজুয়ালাইজেশন এবং সতর্কবার্তা সহ এটি আধুনিক ও ব্যবহারবান্ধব অভিজ্ঞতা প্রদান করে।",
-          "image": "EM1.jpeg",
-          "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
-        },
-        {
-          "title": "জালিয়াতি শনাক্তকরণ সিস্টেম",
-          "description": "এই প্রকল্পটি একটি জালিয়াতি পর্যালোচনা ও যাচাইকরণ সিস্টেম, যা ব্যবসায়িক রিভিউ কার্যক্রম বিশ্লেষণ ও যাচাই করার জন্য ডিজাইন করা হয়েছে। এটি লোকেশন ম্যাপিং, যোগাযোগের তথ্য, রেটিং এবং রিভিউ পরিসংখ্যানসহ বিস্তারিত ব্যবসায়িক প্রোফাইল প্রদর্শন করে। প্ল্যাটফর্মটি মোট রিভিউ, রিভিউয়ার এবং প্রতি ব্যক্তির গড় রিভিউ ট্র্যাক করে সন্দেহজনক প্যাটার্ন শনাক্ত করে। রিস্ক্যান, স্ট্যাটাস ট্র্যাকিং, PDF এক্সপোর্ট এবং রিকোয়েস্ট ম্যানেজমেন্ট সুবিধার মাধ্যমে সিস্টেমটি জাল আচরণ শনাক্ত করতে, ডেটার সত্যতা নিশ্চিত করতে এবং রিভিউ মডারেশন ও কমপ্লায়েন্সের জন্য কার্যকর সিদ্ধান্ত গ্রহণে সহায়তা করে।",
-          "image": "FD1.jpeg",
-          "deploymentUrl": "https://review.reputationtask.com/login"
-        },
-        {
-          "title": "PCO প্রশিক্ষণ",
-          "description": "PCO প্রশিক্ষণ যুক্তরাজ্যের পেশাদার ড্রাইভারদের জন্য একটি বিশেষায়িত প্ল্যাটফর্ম। এতে প্রশিক্ষণ মডিউল, অনুশীলন পরীক্ষা এবং সার্টিফিকেশন প্রস্তুতির সুবিধা রয়েছে, যা ড্রাইভারদের নিয়ন্ত্রক প্রয়োজনীয়তা পূরণ ও দক্ষতা উন্নয়নে সহায়তা করে।",
-          "image": "PCO1.png",
-          "deploymentUrl": "https://uk-driving-course.vercel.app/en"
-        }
+      "title": "বাংলাদেশ আবহাওয়া সরকার প্রকল্প",
+      "description": "উন্নত আবহাওয়া বিশ্লেষণ প্ল্যাটফর্ম। আমাদের অত্যাধুনিক ড্যাশবোর্ড নির্ভুলতা এবং স্বচ্ছতার সাথে বাংলাদেশের জন্য বিস্তৃত আবহাওয়া সংক্রান্ত অন্তর্দৃষ্টি প্রদান করে।",
+      "images": ["BDW1.png", "BDW2.png", "BDW3.png"],
+      "deploymentUrl": "https://www.bmdcl17.com/"
+    },
+    {
+      "title": "ইসলামী দাওয়াহ ইনস্টিটিউট",
+      "description": "ইসলামী দাওয়াহ একটি Next.js (App Router) + TypeScript অ্যাপ্লিকেশন যা ইসলামী প্রচার কার্যক্রম সমন্বয় ও প্রতিবেদন করার জন্য। এতে ভূমিকা-ভিত্তিক ড্যাশবোর্ড রয়েছে (অ্যাডমিন, দায়ী/অ্যাম্বাসেডর, সহকারী এবং ব্যবহারকারী)।",
+      "images": ["ISD1.jpeg", "ISD2.jpeg", "ISD3.jpeg"],
+      "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
+    },
+    {
+      "title": "মুভিং কোট নিউ ইয়র্ক",
+      "description": "মুভিং কোট নিউ ইয়র্ক NY জুড়ে সম্পূর্ণ রিলোকেশন পরিষেবা প্রদান করে। প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারের সাথে ম্যাচ করে, তাৎক্ষণিক উদ্ধৃতি দেয়, রিয়েল-টাইমে মুভিং অগ্রগতি ট্র্যাক করে এবং একটি চাপমুক্ত অভিজ্ঞতা নিশ্চিত করতে ব্যাপক মুভিং সংস্থান সরবরাহ করে।",
+      "images": ["MQT1.png", "MQT2.png", "MQT3.png"],
+      "deploymentUrl": "https://movingquotenewyork.com/"
+    },
+    {
+      "title": "হিলফুল ফুজুল — বুক শপ",
+      "description": "হিলফুল ফুজুল হল একটি Next.js (App Router) + TypeScript ই-কমার্স প্ল্যাটফর্ম যা বই এবং প্রকাশকদের জন্য উপযোগী। এতে পণ্য, লেখক, প্রকাশক এবং অর্ডার পরিচালনার জন্য ভূমিকা-ভিত্তিক অ্যাডমিন ইন্টারফেস; ক্যাটাগরি ব্রাউজিং, অনুসন্ধান, কার্ট এবং উইশলিস্ট সহ গ্রাহক-মুখী স্টোরফ্রন্ট; এবং পেমেন্ট প্রসেসিং সহ চেকআউট ফ্লো অন্তর্ভুক্ত রয়েছে।",
+      "images": ["KG2.png", "KG1.png", "KG3.png"],
+      "deploymentUrl": "https://hilfulfujulbd.com/"
+    },
+    {
+      "title": "মুভিং কোট নিউ ইয়র্ক",
+      "description": "মুভিং কোট নিউ ইয়র্ক NY জুড়ে সম্পূর্ণ রিলোকেশন পরিষেবা প্রদান করে। প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারের সাথে ম্যাচ করে, তাৎক্ষণিক উদ্ধৃতি দেয়, রিয়েল-টাইমে মুভিং অগ্রগতি ট্র্যাক করে এবং একটি চাপমুক্ত অভিজ্ঞতা নিশ্চিত করতে ব্যাপক মুভিং সংস্থান সরবরাহ করে।",
+      "images": ["MQN1.png", "MQT2.png", "MQT3.png"],
+      "deploymentUrl": "https://movingquotenewyork.com/"
+    },
+    {
+      "title": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম",
+      "description": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম হল একটি Next.js (App Router) + TypeScript প্ল্যাটফর্ম যা এন্ড-টু-এন্ড ক্লায়েন্ট অপ্স চালানোর জন্য। এতে ভূমিকা-নির্দিষ্ট ড্যাশবোর্ড (অ্যাডমিন, এএম/সিইও, এজেন্ট, কিউসি, ডাটা-এন্ট্রি, ক্লায়েন্ট), টাস্ক এবং কিউসি ওয়ার্কফ্লো রয়েছে যাতে বিরতির কারণ এবং পারফরম্যান্স স্কোরিং অন্তর্ভুক্ত।",
+      "images": ["NR1.png", "NR2.png", "NR3.png"],
+      "deploymentUrl": "http://app.netreptask.com/"
+    },
+    {
+      "title": "রেপুটেশন প্রাইম",
+      "description": "রেপুটেশন প্রাইম টাস্ক ম্যানেজমেন্ট সিস্টেম হল একটি Next.js (App Router) + TypeScript প্ল্যাটফর্ম যা এন্ড-টু-এন্ড ক্লায়েন্ট অপ্স চালানোর জন্য। এতে ভূমিকা-নির্দিষ্ট ড্যাশবোর্ড (অ্যাডমিন, এএম/সিইও, এজেন্ট, কিউসি, ডাটা-এন্ট্রি, ক্লায়েন্ট), টাস্ক এবং কিউসি ওয়ার্কফ্লো রয়েছে যাতে বিরতির কারণ এবং পারফরম্যান্স স্কোরিং অন্তর্ভুক্ত।",
+      "images": ["RP1.png", "RP2.png", "RP3.png"],
+      "deploymentUrl": "https://reputationtask.com/"
+    },
+    {
+      "title": "গ্রাভিওনে - স্বাস্থ্য, সুস্থতা ও মানবতাকে উন্নত করা",
+      "description": "গ্রাভিওনে-তে, আমরা বিশ্বাস করি বিলাসিতা এবং সুস্থতার সংযোগস্থলে, যেখানে বিজ্ঞান মানবতার সাথে মিলিত হয়। আমাদের পদ্ধতি নির্ভুলতার মধ্যে নিহিত, গবেষণা দ্বারা পরিচালিত এবং মানবসম্ভাবনার গভীর সম্ভাবনা দ্বারা অনুপ্রাণিত।",
+      "image": "GR1.png",
+      "deploymentUrl": "https://www.gravionne.com/"
+    },
+    {
+      "title": "এআইবিএল ছুটি ব্যবস্থাপনা সিস্টেম",
+      "description": "এই প্রকল্পটি আল-আরাফাহ ইসলামী ব্যাংক পিএলসি-র জন্য তৈরি একটি স্মার্ট উপস্থিতি ব্যবস্থাপনা সিস্টেম যা কর্মচারীদের উপস্থিতি রিয়েল-টাইমে পর্যবেক্ষণ ও পরিচালনা করে। সিস্টেমটি মোট সক্রিয় কর্মচারী, উপস্থিত, দেরিতে আগত, অনুপস্থিত এবং ডিউটিতে থাকা কর্মীদের শতাংশ সহ একটি গতিশীল ড্যাশবোর্ড প্রদর্শন করে।",
+      "images": ["AIBL1.jpeg", "AIBL2.jpeg"],
+      "deploymentUrl": "https://aibl-plc.vercel.app/"
+    },
+    {
+      "title": "ইকোমনিটর সিস্টেম",
+      "description": "ইকোমনিটর হল একটি স্মার্ট পরিবেশ পর্যবেক্ষণ সিস্টেম যা রিয়েল-টাইম আবহাওয়ার অন্তর্দৃষ্টি এবং বিশ্লেষণ প্রদান করে। এটি ইন্টারেক্টিভ ড্যাশবোর্ড এবং ভিজুয়াল চার্টের মাধ্যমে তাপমাত্রা, আর্দ্রতা, বাতাসের গতি, চাপ, ইউভি ইনডেক্স এবং বৃষ্টিপাতের মতো মূল মেট্রিক্স প্রদর্শন করে। প্ল্যাটফর্মটিতে প্রবণতা বিশ্লেষণ, অ্যানিমেটেড ডেটা ভিজুয়ালাইজেশন এবং সক্রিয় সিদ্ধান্ত গ্রহণে সহায়তার জন্য উচ্চ ইউভি সতর্কতার মতো সিস্টেম অ্যালার্ম রয়েছে। আবহাওয়া পর্যবেক্ষণ, জলের গুণমান ট্র্যাকিং, রিপোর্ট এবং ব্যবহারকারী ব্যবস্থাপনার মডিউলগুলির সাথে, ইকোমনিটর একটি আধুনিক, ব্যবহারকারী-বান্ধব ইন্টারফেসে নির্ভুল ডেটা ট্র্যাকিং এবং দক্ষ পরিবেশগত বিশ্লেষণ নিশ্চিত করে।",
+      "images": ["EM1.jpeg","EM2.jpeg","EM3.jpeg","EM4.jpeg"],
+      "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
+    },
+    {
+      "title": "ডিএনএ রিপোর্ট সিস্টেম",
+      "description": "ডিএনএ আর্কাইভ হল একটি কেন্দ্রীভূত ল্যাবরেটরি ব্যবস্থাপনা সিস্টেম যা কেস, নমুনা, রিপোর্ট, স্টোরেজ এবং ব্যবহারকারীর কার্যকলাপ ট্র্যাক করে। এটি রিয়েল-টাইম অ্যানালিটিক্স, সিস্টেম মনিটরিং এবং দক্ষ ফরেনসিক ডেটা ম্যানেজমেন্টের জন্য সুবিন্যস্ত ওয়ার্কফ্লো সরবরাহ করে।",
+      "images": ["DNA1.png"],
+      "deploymentUrl": "https://dna-case-management.vercel.app/login"
+    },
+    {
+      "title": "রিয়েল এস্টেট ম্যানেজমেন্ট সিস্টেম",
+      "description": "এই রিয়েল এস্টেট কোম্পানি প্ল্যাটফর্মটি অ্যাডমিন, এজেন্ট এবং ক্লায়েন্টদের জন্য স্বতন্ত্র ভূমিকা সহ সম্পত্তির তালিকা এবং ব্যবহারকারীর মিথস্ক্রিয়া পরিচালনা করার জন্য ডিজাইন করা হয়েছে। অ্যাডমিনরা সমস্ত অপারেশন তদারকি করতে পারেন, ব্যবহারকারী এবং সম্পত্তি পরিচালনা করতে পারেন; এজেন্টরা তাদের সম্পত্তির তালিকা যুক্ত এবং পরিচালনা করতে পারেন; যখন ব্যবহারকারীরা সম্পত্তি ব্রাউজ, ফিল্টার এবং অনুসন্ধান করতে পারেন। সিস্টেমটি সুরক্ষিত ভূমিকা-ভিত্তিক অ্যাক্সেস, বহুভাষিক সমর্থন এবং সমস্ত সংশ্লিষ্ট পক্ষের মধ্যে মসৃণ যোগাযোগ নিশ্চিত করে।",
+      "images": ["RE1.png"],
+      "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
+    },
+    {
+      "title": "পিসিও ট্রেনিং",
+      "description": "পিসিও ট্রেনিং হল যুক্তরাজ্যের পেশাদার ড্রাইভারদের জন্য একটি বিশেষায়িত প্ল্যাটফর্ম। এটি ড্রাইভারদের নিয়ন্ত্রক প্রয়োজনীয়তা পূরণ করতে এবং তাদের দক্ষতা উন্নত করতে সহায়তা করার জন্য ব্যাপক প্রশিক্ষণ মডিউল, অনুশীলন পরীক্ষা এবং সার্টিফিকেশন প্রস্তুতি সরবরাহ করে।",
+      "images": ["PCO1.png"],
+      "deploymentUrl": "https://uk-driving-course.vercel.app/en"
+    },
+    {
+      "title": "জালিয়াতি সনাক্তকরণ সিস্টেম",
+      "description": "এই প্রকল্পটি একটি জালিয়াতি পর্যালোচনা এবং যাচাইকরণ সিস্টেম যা ব্যবসায়িক পর্যালোচনা কার্যক্রম বিশ্লেষণ এবং বৈধতা দেওয়ার জন্য ডিজাইন করা হয়েছে। এটি অবস্থান ম্যাপিং, যোগাযোগের তথ্য, রেটিং এবং পর্যালোচনা পরিসংখ্যান সহ বিস্তারিত ব্যবসায়িক প্রোফাইল প্রদর্শন করে। প্ল্যাটফর্মটি সন্দেহজনক প্যাটার্ন সনাক্ত করতে মোট পর্যালোচনা, পর্যালোচনাকারী এবং প্রতি ব্যক্তি গড় পর্যালোচনা ট্র্যাক করে। রিস্ক্যান, স্ট্যাটাস ট্র্যাকিং, পিডিএফ এক্সপোর্ট এবং অনুরোধ ব্যবস্থাপনার মতো বৈশিষ্ট্যগুলির সাথে, সিস্টেমটি জালিয়াতি আচরণ সনাক্ত করতে, ডেটার সত্যতা নিশ্চিত করতে এবং পর্যালোচনা মডারেশন এবং সম্মতির জন্য জ্ঞাত সিদ্ধান্ত গ্রহণকে সমর্থন করে।",
+      "images": ["FD1.jpeg"],
+      "deploymentUrl": "https://review.reputationtask.com/login"
+    }
       ]
     },
     "clientPage": {
